OAuth/src/objects/OAuth2Service__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth2 Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth2 Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>